<resources>
    <string name="app_name">SafeCampus</string>
    <string name="safe_campus">SAFE CAMPUS</string>
    <string name="registro_de_ocorrencias">Registro de Ocorrência</string>
    <string name="para_mim">Para mim</string>
    <string name="para_outro">Para outro</string>
    <string name="botao_avancar">Avançar</string>
    <string name="ativar_panico">Ativar Pânico</string>
    <string name="desativar_panico">Desativar Pânico</string>
    <string name="botao_off">Off</string>
    <string name="botao_on">On</string>
    <string name="info">Informação:</string>
    <string name="tipo_de_ocorrencia">Tipo de Ocorrência</string>
    <string name="botao_enviar">Enviar</string>
    <string name="relatorio_de_ocorrencia">Relatório de Ocorrência</string>
    <string name="filtro">Filtro</string>
    <string name="tipo">Tipo</string>
    <string name="periodo">Período</string>
    <string name="local">Local</string>
    <string name="pesquise_data">Pesquise por data</string>
    <string name="botao_limpar">Limpar</string>
    <string name="botao_ok">OK</string>
    <string name="botao_foto">Inserir Imagem</string>
    <string name="hint_informacao">Insira a sua informação</string>
</resources>
