<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context="com.bignerdranch.android.safecampus.SafeCampusActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/registro_de_ocorrencias"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/info"
                android:textSize="20dp"
                android:textStyle="bold|italic"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_informacao"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:text="@string/tipo_de_ocorrencia"
                android:textSize="20dp"
                android:textStyle="bold|italic"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contextClickable="true"/>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

            </ListView>

            <Button
                android:id="@+id/botao_enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/botao_foto"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|bottom"
                android:padding="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/botao_enviar"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
