<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context="com.bignerdranch.android.safecampus.SafeCampusActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/safe_campus"
        android:textSize="35dp"
        android:textStyle="bold|italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/registro_de_ocorrencias"
            android:textStyle="bold|italic"
            android:textSize="25dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="30dp">

            <Button
                android:id="@+id/botao_para_mim"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:text="@string/para_mim"/>
            <Button
                android:id="@+id/botao_para_outro"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:text="@string/para_outro"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
